--- a/public/locales/jp/layout.json
+++ b/public/locales/jp/layout.json
@@ -36,8 +36,8 @@
   "deleteform": "削除しますか？",
   "target": "私の運動目標",
   "friends": "ユーザー探索",
-  "following": "フォロイング",
-  "follower": "フォロー",
+  "following": "フォロー中",
+  "follower": "フォロワー",
   "post": "掲示物",
   "userSearch": "ユーザー探索",
   "userInput": "ユーザーを入力してください。",
