--- a/public/locales/jp/common.json
+++ b/public/locales/jp/common.json
@@ -1,4 +1,30 @@
 {
   "score": "総合運動記録",
-  "mmr": "運動点数"
+  "mmr": "運動点数",
+  "record": "総合運動記録",
+  "recordTotal1": "総運動時間",
+  "recordTotal2": "総消耗カロリー",
+  "recordTotal3": "総サイクリング距離",
+  "recordTotal4": "総ランニング距離",
+  "followRequest": "要請中",
+  "unfollow": "削除",
+  "follow": "フォロー",
+  "post": "掲示物",
+  "follower": "フォロワー",
+  "following": "フォロー中",
+  "selfIntroduce": "自己紹介",
+  "title": "1週間の運動統計",
+  "running": "ランニング",
+  "cycling": "サイクリング",
+  "today": "今日",
+  "1day": "一日前",
+  "2day": "二日前",
+  "3day": "三日前",
+  "4day": "四日前",
+  "5day": "五日前",
+  "6day": "六日前",
+  "title1": "運動比率",
+  "unfollowTitle1": "このアカウントは非公開です。",
+  "unfollowTitle2": "フォローしてください。",
+  "description1": "Dataがありません。"
 }
