--- a/public/locales/jp/layout.json
+++ b/public/locales/jp/layout.json
@@ -9,10 +9,10 @@
   "recordTotal4": "総ランニング距離",
   "recordDes1": "自由運動だけコース作りが可能",
   "recordTitle1": "類型",
-  "recordTitle2": "自由",
-  "recordTitle3": "親善",
-  "recordTitle4": "ソロ",
-  "recordTitle5": "ランク",
+  "recordTitle2": "자유",
+  "recordTitle3": "친선",
+  "recordTitle4": "솔로",
+  "recordTitle5": "랭크",
   "recordKind1": "自由運動",
   "recordKind2": "コース運動(ソロ)",
   "recordKind3": "コース運動(親善)",
@@ -41,7 +41,7 @@
   "post": "掲示物",
   "userSearch": "ユーザー探索",
   "userInput": "ユーザーを入力してください。",
-  "userIntroduce ": "自己紹介",
+  "userIntroduce": "自己紹介",
   "userBirth": "誕生日",
   "userSex": "性別",
   "userLocation": "地域"
