--- a/public/locales/jp/profile.json
+++ b/public/locales/jp/profile.json
@@ -6,6 +6,7 @@
   "weight": "体重",
   "weightText": "体重を入力してください。",
   "introduce": "紹介",
+  "userIntroduce": "自己紹介",
   "introduceText": "自己紹介を入力してください。",
   "location": "地域",
   "locationText": "地域を入力してください。",
