--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -1,4 +1,30 @@
 {
   "score": "종합운동기록",
-  "mmr": "운동점수"
+  "mmr": "운동점수",
+  "record": "종합 운동기록",
+  "recordTotal1": "총 운동 시간",
+  "recordTotal2": "총 소모 칼로리",
+  "recordTotal3": "총 라이딩 거리",
+  "recordTotal4": "총 러닝 거리",
+  "followRequest": "요청중",
+  "unfollow": "언팔로우",
+  "follow": "팔로우",
+  "post": "게시물",
+  "follower": "팔로워",
+  "following": "팔로잉",
+  "selfIntroduce": "자기소개",
+  "title": "최근 일주일 운동통계",
+  "running": "러닝",
+  "cycling": "라이딩",
+  "today": "오늘",
+  "1day": "1일 전",
+  "2day": "2일 전",
+  "3day": "3일 전",
+  "4day": "4일 전",
+  "5day": "5일 전",
+  "6day": "6일 전",
+  "title1": "운동비율",
+  "unfollowTitle1": "비공개 계정입니다",
+  "unfollowTitle2": "포스트 및 기록을 보려면 팔로우하세요",
+  "description1": "Data가 존재하지 않습니다"
 }
