--- a/public/locales/ko/profile.json
+++ b/public/locales/ko/profile.json
@@ -6,6 +6,7 @@
   "weight": "몸무게",
   "weightText": "체중을 입력해주세요",
   "introduce": "소개",
+  "userIntroduce": "자기소개",
   "introduceText": "자기소개를 입력해주세요",
   "location": "지역",
   "locationText": "지역을 입력해주세요",
