--- a/public/locales/jp/index.json
+++ b/public/locales/jp/index.json
@@ -1,13 +1,13 @@
 {
-  "cycling": "サイクリング",
-  "running": "ランニング",
+  "cycling": "距離",
+  "running": "距離",
   "agree": "フォローしました!",
   "postDesc": "掲示物がありません",
   "title1": "自分の運動比率",
   "description1": "運動データがありません。",
   "target": "目標",
-  "target1": "サイクリングの運動目標率",
-  "target2": "ランニングの運動目標率",
+  "target1": "サイクリング",
+  "target2": "ランニング",
   "start": "開始日",
   "end": "終了日",
   "targetContent1": "目標がありません",
