--- a/public/locales/jp/layout.json
+++ b/public/locales/jp/layout.json
@@ -30,7 +30,7 @@
   "courseTitle": "経路探索",
   "courseSearch": "現在の位置検索中",
   "courseGps": "GPSに対応しておりません。",
-  "courseInput": "経路を入力してください。",
+  "courseInput": "地域名を入力してください。",
   "courseDetail": "詳細",
   "date": "YYYY年MM月DD日",
   "deleteform": "削除しますか？",
