--- a/public/locales/jp/purpose.json
+++ b/public/locales/jp/purpose.json
@@ -13,8 +13,8 @@
   "pContentFaile": "目標はすでに設定されています。",
   "pContent2": "簡単です！",
   "pKind": "種目",
-  "pTitle3": "題目",
-  "pPurpose2": "運動目標",
+  "pTitle3": "タイトル",
+  "pPurpose2": "目標距離",
   "pPurposeKm": "目標km",
   "year": "年",
   "month": "月",
