--- a/public/locales/ko/layout.json
+++ b/public/locales/ko/layout.json
@@ -30,7 +30,7 @@
   "courseTitle": "코스탐색",
   "courseSearch": "현재위치검색중...",
   "courseGps": "GPS를 지원하지 않습니다",
-  "courseInput": "코스를 입력해주세요",
+  "courseInput": "지역명을 입력해주세요",
   "courseDetail": "상세보기",
   "date": "YYYY년 MM월 DD일",
   "deleteform": "진짜삭제하시겠습니까?",
